[package]
name = "crypto_server_rust_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
warp = "0.3"
juniper = "0.15.11"
juniper_subscriptions = "0.16.0"
juniper_warp = "0.7.0"
futures = "0.3"
async-stream = "0.3"
log = "0.4.8"
env_logger = "0.10"
